# riscv-pio

./: .gitignore  .gitmodules  .scalafmt.conf  README.md  build.sbt  build.sc  justfile
.github/workflows/: test.yml
docs/: .$pio-block.drawio.bkp  exec.md  pio-block.drawio  pioasm.md
drivers/: Cargo.toml  startup.S
drivers/src/: lib.rs  pio.rs
pioasm/: Cargo.toml
pioasm/src/: instruction.rs  main.rs
project/: plugins.sbt
software/: Cargo.toml  Makefile  README.md
software/.cargo/: config.toml
software/src/: lib.rs  serial.rs
src/main/resources/vsrc/: ClockDivider.v  Pins.v  gpio_pins.sv
src/main/scala/: Main.scala
src/main/scala/axi/: AXILite.scala  AXILiteRegisterSlave.scala
src/main/scala/blinky/: Blink.scala  BlinkAxiLite.scala
src/main/scala/dev/joeyh/: Generate.scala  LedFifoProducer.scala  Main.scala  PioAxiWrapper.scala
src/main/scala/dev/joeyh/axi/: AXILite.scala  AxiLiteRegisterSlave.scala
src/main/scala/dev/joeyh/pio/: ClockDivider.scala  FIFO.scala  PIO.scala  Pins.scala
src/main/scala/dev/joeyh/pio/execution/: ALU.scala  Branch.scala  Decode.scala  ExecUnit.scala  Fetch.scala  Move.scala  ProgramCounter.scala  Wait.scala
src/main/scala/dev/joeyh/pio/fifo/: ConsumerIO.scala  FIFO.scala  (+4 more)
src/main/scala/gcd/: DecoupledGCD.scala
src/main/scala/sevenseg/: SevenSegment.scala
src/main/scala/top/: Top.scala  TopGen.scala
src/test/scala/blinky/: BlinkTest.scala
src/test/scala/dev/joeyh/pio/: ClockDividerTest.scala  PIOTest.scala  PinsTest.scala  ProducerTest.scala
src/test/scala/gcd/: GCDSpec.scala
verilog/: Pins_tb.v
(+28 files in other folders)
